--- a/00ExperimentalAr.Rmd
+++ b/00ExperimentalAr.Rmd
@@ -998,7 +998,7 @@ summarize_brms(
 
 
 formula <- bf(
-  aff ~ 
+  (aff + 1) ~ 
     persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw +
@@ -1023,7 +1023,7 @@ prior1 <- c(
   
   , brms::set_prior("normal(0, 2)", class = "sd", group = "coupleID", lb = 0)
   
-  , brms::set_prior("cauchy(0, 2)", class = "sigma", lb = 0)
+  #, brms::set_prior("cauchy(0, 2)", class = "sigma", lb = 0)
   , brms::set_prior("cauchy(0, 2)", class = "sderr", lb = 0)
   
   , autocor_prior
